--- a/app/src/main/res-screen/home/layout/activity_home_item.xml
+++ b/app/src/main/res-screen/home/layout/activity_home_item.xml
@@ -10,32 +10,35 @@
             type="br.com.liveo.mvp.model.User" />
     </data>
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="10dp"
-        tools:ignore="UseCompoundDrawables">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/img_user"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="6dp"
-            android:layout_marginStart="6dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="10dp"
             android:contentDescription="@string/clear"
-            app:imageLoadRounded="@{user.avatar}" />
+            app:imageLoadRounded="@{user.avatar}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/txt_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             android:maxLines="1"
             android:textSize="16sp"
-            app:nameWithLastName="@{user}" />
-    </LinearLayout>
+            app:layout_constraintBottom_toBottomOf="@+id/img_user"
+            app:layout_constraintStart_toEndOf="@+id/img_user"
+            app:layout_constraintTop_toTopOf="@+id/img_user"
+            app:nameWithLastName="@{user}"
+            tools:text="Rudson Lima" />
+    </android.support.constraint.ConstraintLayout>
 </layout>
